<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoInfo"
    android:weightSum="1">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:background="@color/fondo"
        android:textColor="@color/fondoTextoNombre"
        android:textSize="20dp"
        android:paddingLeft="80dp"
        android:text="@string/titulo_rutinas"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.86"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/biceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:background="@color/fondoInfo"
            android:text="@string/biceps"
            android:textColor="@color/fondoTextoNombre"
            android:textSize="15dp" />

        <Button
            android:id="@+id/triceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:background="@color/fondoInfo"
            android:text="@string/piernas"
            android:textColor="@color/fondoTextoNombre"
            android:textSize="15dp" />

        <Button
            android:id="@+id/abdomen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:background="@color/fondoInfo"
            android:text="@string/abdomen"
            android:textColor="@color/fondoTextoNombre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:background="@color/fondoBoton"
            android:text="@string/anterior"
            android:textColor="@color/fondoTextoNombre"
            android:textSize="15dp" />

        <Button
            android:id="@+id/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@color/fondoBoton"
            android:text="@string/siguiente"
            android:textSize="15dp"
            android:textColor="@color/fondoTextoNombre"/>
    </LinearLayout>

</LinearLayout>