<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoInfo"
    android:weightSum="1">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:background="@color/fondo"
        android:textColor="@color/fondoTextoNombre"
        android:textSize="20dp"
        android:paddingLeft="120dp"
        android:text="@string/titulo_carbohidratos"/>

    <TextView
        android:id="@+id/carbohidrato1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:layout_weight="0.85"
        android:fontFamily="@font/MixBrush"
        android:textSize="20dp"
        android:text="@string/pantalla_11" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:background="@color/fondoBoton"
            android:text="@string/anterior"
            android:textColor="@color/fondoTextoNombre"
            android:textSize="15dp" />

        <Button
            android:id="@+id/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@color/fondoBoton"
            android:text="@string/siguiente"
            android:textSize="15dp"
            android:textColor="@color/fondoTextoNombre"/>
    </LinearLayout>


</LinearLayout>