<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context="una.ac.cr.nutrifitness.MainActivity">
    <!--tools:context="activities.LoginActivities">-->

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Imagen de Nutrition Inside -->
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="340dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-40dp"
            android:src="@drawable/nutrilogo" />

        <!-- Campo de texto del nombre -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/fondoTextoNombre"
                android:hint="@string/nombre"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

        <!-- Campo de texto de la contraseña -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditPassword"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/fondoTextoNombre"
                android:hint="@string/contrase_a"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSesion"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/fondoBoton"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@color/fondoTextoNombre" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegistrar"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/fondoBoton"
            android:text="@string/registrarse"
            android:textColor="@color/fondoTextoNombre" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
