<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedRegistro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context="una.ac.cr.nutrifitness.MainActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <!-- Campo de texto del nombre -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditText"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/fondoTextoNombre"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!-- Campo de texto del nombre -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextCorreo"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/fondoTextoNombre"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!-- Campo de texto del contraseña -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextContraseña"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/fondoTextoNombre"
                    android:hint="@string/contrase_a"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText" />

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="186dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnAnterior"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/fondoBoton"
                android:text="Anterior"
                android:textColor="@color/fondoTextoNombre" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSiguiente"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/fondoBoton"
                android:text="Siguiente"
                android:textColor="@color/fondoTextoNombre" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>